started work on background page

--- a/src/popup.pug
+++ b/src/popup.pug
@@ -3,5 +3,10 @@ html
         title Test lol
 
     body
-        div
+        div(style="width: 300px")
             h1 Test
+
+            hr
+
+            p
+            | Here's some text
