--- a/src/popup.pug
+++ b/src/popup.pug
@@ -10,3 +10,6 @@ html
 
             p
             | Here's some text
+            | Here's some text
+
+            a(href="/dashboard/index.html", target="_blank") Lololol
