Setup vue for dashboard page

--- a/src/dashboard.pug
+++ b/src/dashboard.pug
@@ -3,5 +3,6 @@ html
         title Thankful Dashboard
 
     body
-        div(style="width: 300px")
-            h1 Dashboard
+        div#dashboard
+          | Test
+        script(src="./index.js")
