Cleaned up popup.pug

--- a/src/popup/popup.pug
+++ b/src/popup/popup.pug
@@ -1,6 +1,6 @@
 html
     head
-        title Test lol
+        title Thankful
 
     body
         div(style="width: 300px")
@@ -10,6 +10,7 @@ html
 
             p
             | Here's some text
-            | Here's some text
 
-            a(href="/dashboard/index.html", target="_blank") Lololol
+            hr
+
+            a(href="/dashboard/index.html", target="_blank") Open dashboard
