Major UI overhaul: vue-bootstrap -> vuetify

--- a/src/dashboard/dashboard.pug
+++ b/src/dashboard/dashboard.pug
@@ -1,5 +1,6 @@
 html
     head
+        link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons', rel='stylesheet')
         meta(charset="UTF-8")
         title Thankful Dashboard
 
