--- a/src/popup/popup.pug
+++ b/src/popup/popup.pug
@@ -2,6 +2,24 @@ html
     head
         meta(charset="UTF-8")
         title Thankful
+        script.
+            import browser from 'webextension-polyfill';
+
+            function openDashboard() {
+                console.log('Opening dashboard')
+                let dashboard_url = browser.runtime.getURL('dashboard/index.html');
+                browser.tabs
+                    .query({ currentWindow: true, url: dashboard_url })
+                    .then(e => {
+                        if (e.length < 1) {
+                            browser.tabs.create({
+                                url: dashboard_url,
+                            });
+                        } else {
+                            browser.tabs.update(e[0].id, { active: true });
+                        }
+                    });
+            }
 
     body
         div(style="width: 300px")
@@ -14,4 +32,4 @@ html
 
             hr
 
-            a(href="/dashboard/index.html", target="_blank") Open dashboard
+            button(type="button", onclick="openDashboard") Open dashboard
