--- a/src/popup/popup.pug
+++ b/src/popup/popup.pug
@@ -2,7 +2,7 @@ html
     head
         meta(charset="UTF-8")
         title Thankful
+        link(rel="stylesheet" href="../dashboard.css")
 
     body
         div#popup
-        script(src="./index.js")
