updated packages, moved notifications to component, added tabbed navigation on large screens (and hamburger on small screens), moved snackbar to bottom

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -108,10 +108,13 @@ $material-light := {
     indeterminateTime: $grey.lighten-1,
     title: $grey.lighten-2
   },
+  calendar: {
+    background-color: white
+  },
   bg-color: #fff
   fg-color: #000
   text-color: #000
-  primary-text-percent: .87
+  primary-text-percent: .80 // Originally 0.87
   secondary-text-percent: .54
   disabledORhints-text-percent: .38
   divider-percent: .12
