--- a/src/dashboard/dashboard.pug
+++ b/src/dashboard/dashboard.pug
@@ -2,6 +2,7 @@ html
     head
         meta(charset="UTF-8")
         title Thankful Dashboard
+        link(rel="shortcut icon" type="image/png" href="/media/icon-256.png")
 
         if mode == 'development'
             script(src="http://localhost:8098")
