--- a/src/dashboard/dashboard.pug
+++ b/src/dashboard/dashboard.pug
@@ -4,7 +4,8 @@ html
         title Thankful Dashboard
         link(rel="shortcut icon" type="image/png" href="/media/icon-256.png")
 
-        if mode == 'development'
+        // This used to work to connect to stand-alone Vue dev tools, but not sure how to get it working again due to CSP difficulties
+        //if mode == 'development'
             script(src="http://localhost:8098")
 
     body
